--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: bluetooth_print
+name: flutter_bluetooth_label_pos_print
 description: BluetoothPrint is a bluetooth plugin to help developers build bluetooth thermal printer apps for both iOS and Android.
-version: 4.2.0
-homepage: https://github.com/thon-ju/bluetooth_print
+version: 1.0.0
+homepage: https://github.com/junyongxlee/flutter_bluetooth_label_pos_print
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
